<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_sign_in">Connect your Trakt Account</string>
    <string name="add_fav_label">ADD FAVORITES</string>
    <string name="add_fav_label_tv">Add Favorite</string>
    <string name="added_fav_label">Added to Favorites</string>
    <string name="added_watchlist_lab">Added to watchlist</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="anime_label">Anime</string>
    <string name="api_path_movie">/api/v3/hd/img/movie/</string>
    <string name="api_path_tv">/api/v3/hd/img/tv/</string>
    <string name="apk_downloaded_but_could_not">"The Apk has been downloaded but we could't tell the System to open it. Please go to:"</string>
    <string name="app_id">9C0B4A9E</string>
    <string name="app_language">App Language</string>
    <string name="app_name">FLIX VISION</string>
    <string name="app_not_installed_label">APP NOT INSTALLED</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply_label">APPLY</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="brightness">Brightness: %1$d</string>
    <string name="cache_cleared">Cache cleared</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="cancel_label">CANCEL</string>
    <string name="cannot_be_played_on_device_yt_lab">Cannot be played In this device</string>
    <string name="captions_label">Captions</string>
    <string name="captions_label_reload">Reload Subtitles</string>
    <string name="cartoon_filter_label">CARTOON FILTER</string>
    <string name="cast_ad_label">Ad</string>
    <string name="cast_casting_to_device">Casting to %1$s</string>
    <string name="cast_closed_captions">Closed captions</string>
    <string name="cast_closed_captions_unavailable">Closed captions unavailable</string>
    <string name="cast_connecting_to_device">Connecting to %1$s</string>
    <string name="cast_disconnect">Disconnect</string>
    <string name="cast_dynamic_group_name_format">%1$s + %2$d</string>
    <string name="cast_expanded_controller_ad_image_description">Image displayed while the cast receiver is playing an ad</string>
    <string name="cast_expanded_controller_ad_in_progress">Ad in progress…</string>
    <string name="cast_expanded_controller_background_image">Album art</string>
    <string name="cast_expanded_controller_live_head_description">Current position is at the head of the live stream</string>
    <string name="cast_expanded_controller_live_stream_indicator">Live stream</string>
    <string name="cast_expanded_controller_loading">Loading…</string>
    <string name="cast_expanded_controller_skip_ad_label">Skip Ad</string>
    <string name="cast_expanded_controller_skip_ad_text">You can skip ad in %1$d…</string>
    <string name="cast_forward">Forward</string>
    <string name="cast_forward_10">Forward ten seconds</string>
    <string name="cast_forward_30">Forward thirty seconds</string>
    <string name="cast_intro_overlay_button_text">@android:string/ok</string>
    <string name="cast_invalid_stream_duration_text">--:--</string>
    <string name="cast_invalid_stream_position_text">--:--</string>
    <string name="cast_live_label">LIVE</string>
    <string name="cast_mute">Mute</string>
    <string name="cast_notification_connected_message">Connected to %1$s</string>
    <string name="cast_notification_connecting_message">Connecting to %1$s</string>
    <string name="cast_notification_default_channel_name">Cast</string>
    <string name="cast_notification_disconnect">Disconnect</string>
    <string name="cast_pause">Pause</string>
    <string name="cast_play">Play</string>
    <string name="cast_rewind">Rewind</string>
    <string name="cast_rewind_10">Rewind ten seconds</string>
    <string name="cast_rewind_30">Rewind thirty seconds</string>
    <string name="cast_seek_bar">Playback seek control</string>
    <string name="cast_skip_next">Skip to next item</string>
    <string name="cast_skip_prev">Skip to previous item</string>
    <string name="cast_stop">Stop</string>
    <string name="cast_stop_live_stream">Stop live stream</string>
    <string name="cast_tracks_chooser_dialog_audio">Audio</string>
    <string name="cast_tracks_chooser_dialog_cancel">Cancel</string>
    <string name="cast_tracks_chooser_dialog_closed_captions">Closed Captions</string>
    <string name="cast_tracks_chooser_dialog_default_track_name">Track %1$d</string>
    <string name="cast_tracks_chooser_dialog_none">None</string>
    <string name="cast_tracks_chooser_dialog_ok">OK</string>
    <string name="cast_tracks_chooser_dialog_subtitles">Subtitles</string>
    <string name="cast_unmute">Unmute</string>
    <string name="cd_clear_button">Clear field</string>
    <string name="cd_suggestion_icon">List item icon</string>
    <string name="cd_up_button">Up navigation button</string>
    <string name="cd_voice_search">Voice search</string>
    <string name="change_quality_beta_label">Change Source/res</string>
    <string name="channels_label">Channels</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="check_for_update">Check for Update</string>
    <string name="clean_channels_label">Clean(Remove offline Channels)</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="clear_history_label">Clear History</string>
    <string name="clear_label">Clear</string>
    <string name="clear_search_history_label">Clear Search History</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="clear_watched_list_label">Clear watched list</string>
    <string name="close_label">Close</string>
    <string name="com.google.firebase.crashlytics.mapping_file_id">a8531c230e974cbba95a6dd5d3c40ef3</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="config_uri">https://t.ly/gcCVh</string>
    <string name="config_uri_backup">https://github.com/fvision8/publish/releases/download/12/conf.json</string>
    <string name="confirm_clear_wwe">Do You really want to clear the history?</string>
    <string name="download_label">Download</string>
    <string name="exit_label">Exit</string>
    <string name="favorited_label">FAVORITED</string>
    <string name="favorites_label">Favorites</string>
    <string name="filter_animes_label">Filter Animes</string>
    <string name="filter_movies_label">Filter Movies</string>
    <string name="genre_label">Genre</string>
    <string name="movies_label">Movies</string>
    <string name="my_favorites_label">Favorites</string>
    <string name="resolution_label">Resolution</string>
    <string name="restart_label">Restart</string>
    <string name="search_hint">Search…</string>
    <string name="settings_label">Settings</string>
    <string name="sort_by_label">Sort by</string>
    <string name="tv_series_label">TV Shows</string>
    <string name="watched_label">Watched</string>
    <string name="year_label">Year</string>
</resources>