<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/ic_stat_sort_by_alpha" android:id="@id/action_sort_fav" android:visible="false" android:orderInCategory="100" android:title="Sort by name" app:showAsAction="always" />
    <item android:icon="@drawable/ic_action_search" android:id="@id/action_search" android:orderInCategory="100" android:title="@string/abc_search_hint" app:showAsAction="always" />
    <item android:icon="@drawable/ic_filter_alt_48px" android:id="@id/action_filter" android:orderInCategory="100" android:title="@string/filter_movies_label" app:showAsAction="always" />
    <item android:icon="@drawable/ic_baseline_favorite_24" android:id="@id/action_favorites" android:orderInCategory="100" android:title="@string/favorites_label" app:showAsAction="always" />
    <item android:icon="@drawable/settings" android:id="@id/action_settings" android:orderInCategory="100" android:title="@string/settings_label" app:showAsAction="never" />
    <item android:enabled="true" android:id="@id/action_check_update" android:visible="true" android:orderInCategory="100" android:title="@string/check_for_update" app:showAsAction="never" />
    <item android:enabled="true" android:id="@id/action_refresh" android:visible="true" android:orderInCategory="100" android:title="@string/restart_label" app:showAsAction="never" />
    <item android:enabled="true" android:id="@id/action_exit_app" android:visible="true" android:orderInCategory="100" android:title="@string/exit_label" app:showAsAction="never" />
    <item android:enabled="true" android:id="@id/action_clear" android:visible="false" android:title="@string/clear_label" app:showAsAction="ifRoom" />
</menu>