<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/ic_movie_1" android:id="@id/action_movies" android:visible="true" android:orderInCategory="100" android:title="@string/movies_label" android:checkable="true" app:showAsAction="always" />
    <item android:icon="@drawable/ic_tv_1" android:id="@id/action_tvseries" android:visible="true" android:orderInCategory="100" android:title="@string/tv_series_label" android:checkable="true" app:showAsAction="always" />
    <item android:icon="@drawable/ic_action_naruto_100" android:id="@id/action_anime" android:orderInCategory="100" android:title="@string/anime_label" android:checkable="true" app:showAsAction="always" />
    <item android:icon="@drawable/ic_action_adult" android:id="@id/action_adult" android:orderInCategory="100" android:title="AdultZone" android:checkable="true" app:showAsAction="always" />
    <item android:icon="@drawable/ic_drama" android:id="@id/action_drama" android:orderInCategory="100" android:title="K-Drama" android:checkable="true" app:showAsAction="always" />
    <group android:id="@id/group_tv" android:orderInCategory="4">
        <item android:menuCategory="secondary" android:title="live tv">
            <menu>
                <item android:icon="@drawable/ic_action_live_tv" android:id="@id/action_live_tv_extra" android:orderInCategory="100" android:title="Live TV" android:checkable="true" app:showAsAction="always" />
                <item android:icon="@drawable/ic_action_playlist_play" android:id="@id/action_my_tv_imports" android:visible="true" android:orderInCategory="100" android:title="My Playlists" android:checkable="true" app:showAsAction="never" />
                <item android:icon="@drawable/ic_action_tv_cloud" android:id="@id/action_import_tv" android:visible="true" android:orderInCategory="100" android:title="Import Playlist" android:checkable="true" app:showAsAction="never" />
            </menu>
        </item>
    </group>
    <group android:id="@id/group2" android:orderInCategory="5">
        <item android:menuCategory="secondary" android:title="me">
            <menu>
                <item android:icon="@drawable/trakt_logo_3" android:id="@id/action_trakt" android:visible="true" android:orderInCategory="100" android:title="Trakt TV" android:checkable="true" app:showAsAction="never" />
                <item android:icon="@drawable/ic_history_white" android:id="@id/action_watched_history" android:visible="true" android:orderInCategory="100" android:title="Watched" android:checkable="true" app:showAsAction="never" />
                <item android:icon="@drawable/ic_action_favorite" android:id="@id/action_my_favorites" android:orderInCategory="100" android:title="@string/my_favorites_label" android:checkable="true" app:showAsAction="always" />
            </menu>
        </item>
    </group>
    <item android:menuCategory="secondary" android:orderInCategory="5" android:title="misc">
        <menu>
            <item android:icon="@drawable/magnet" android:id="@id/action_user_torrent" android:orderInCategory="100" android:title="User Torrents" app:showAsAction="never" />
            <item android:icon="@drawable/donation" android:id="@id/action_donation" android:orderInCategory="100" android:title="Donate" app:showAsAction="never" />
            <item android:icon="@drawable/ic_action_settings" android:id="@id/action_settings" android:orderInCategory="100" android:title="@string/settings_label" app:showAsAction="never" />
            <item android:icon="@drawable/ic_action_discord_2" android:id="@id/setting_follow_discord" android:orderInCategory="100" android:title="Discord" app:showAsAction="never" />
            <item android:icon="@drawable/twitter_icon" android:id="@id/setting_follow_twitter" android:orderInCategory="100" android:title="Twitter" app:showAsAction="never" />
            <item android:icon="@drawable/ic_action_email_1" android:id="@id/setting_contact" android:orderInCategory="100" android:title="Report issue" app:showAsAction="never" />
            <item android:icon="@drawable/ic_action_exit_to_app" android:id="@id/action_exit" android:orderInCategory="100" android:title="@string/exit_label" app:showAsAction="never" />
        </menu>
    </item>
</menu>