<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:orientation="vertical" android:id="@id/search_layout" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <View android:id="@id/transparent_view" android:background="@color/search_layover_bg" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:gravity="start" android:orientation="horizontal" android:id="@id/search_bar" android:background="@color/search_field_bg" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageButton android:id="@id/action_back" android:background="?android:selectableItemBackground" android:paddingLeft="@dimen/search_icon_padding" android:paddingRight="@dimen/search_icon_padding" android:layout_width="wrap_content" android:layout_height="fill_parent" android:contentDescription="@string/cd_up_button" app:srcCompat="@drawable/ic_action_navigation_arrow_back" />
            <EditText android:textColor="@color/black" android:textColorHint="@color/gray_50" android:layout_gravity="start" android:id="@id/et_search" android:background="@null" android:paddingLeft="@dimen/search_view_text_padding" android:paddingRight="@dimen/search_view_text_padding" android:layout_width="0.0dip" android:layout_height="fill_parent" android:hint="@string/search_hint" android:maxLines="1" android:layout_weight="1.0" android:imeOptions="actionSearch|flagNoExtractUi" android:textCursorDrawable="@null" android:textAlignment="viewStart" />
            <ImageButton android:id="@id/action_voice" android:background="?android:selectableItemBackground" android:paddingLeft="@dimen/search_icon_padding" android:paddingRight="@dimen/search_icon_padding" android:layout_width="wrap_content" android:layout_height="fill_parent" android:contentDescription="@string/cd_voice_search" app:srcCompat="@drawable/ic_action_voice_search" />
            <ImageButton android:id="@id/action_clear" android:background="?android:selectableItemBackground" android:paddingLeft="@dimen/search_icon_padding" android:paddingRight="@dimen/search_icon_padding" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="fill_parent" android:contentDescription="@string/cd_clear_button" app:srcCompat="@drawable/ic_action_navigation_close" />
        </LinearLayout>
        <ListView android:id="@id/suggestion_list" android:layout_width="fill_parent" android:layout_height="wrap_content" android:divider="@null" android:dividerHeight="0.0dip" />
    </LinearLayout>
</FrameLayout>