<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/transparent" android:layout_width="300.0dip" android:layout_height="wrap_content" android:layout_margin="15.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:id="@id/lin_type" android:background="@drawable/round_corner_filter" android:focusable="true" android:nextFocusUp="@id/save_but" android:nextFocusDown="@id/lin_network" android:layout_width="fill_parent" android:layout_height="50.0dip">
        <TextView android:textSize="16.0dip" android:textColor="@color/white" android:layout_width="50.0dip" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="Type" />
        <Spinner android:textStyle="bold" android:textColor="@color/white" android:id="@id/spinner_type" android:focusable="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:backgroundTint="@color/white" android:foregroundTint="@color/white" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/lin_network" android:background="@drawable/round_corner_filter" android:focusable="true" android:nextFocusUp="@id/lin_type" android:nextFocusDown="@id/lin_year" android:layout_width="fill_parent" android:layout_height="50.0dip">
        <TextView android:textSize="16.0dip" android:textColor="@color/white" android:layout_width="50.0dip" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="Source" />
        <Spinner android:textStyle="bold" android:textColor="@color/white" android:id="@id/spinner_network" android:focusable="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:backgroundTint="@color/white" android:foregroundTint="@color/white" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/lin_genre" android:background="@drawable/round_corner_filter" android:focusable="true" android:nextFocusUp="@id/lin_network" android:nextFocusDown="@id/lin_year" android:layout_width="fill_parent" android:layout_height="50.0dip">
        <TextView android:textSize="16.0dip" android:textColor="@color/white" android:layout_width="50.0dip" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/genre_label" />
        <Spinner android:textStyle="bold" android:textColor="@color/white" android:id="@id/spinner_genre" android:focusable="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:backgroundTint="@color/white" android:foregroundTint="@color/white" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/lin_year" android:background="@drawable/round_corner_filter" android:focusable="true" android:nextFocusUp="@id/lin_genre" android:nextFocusDown="@id/lin_sort" android:layout_width="300.0dip" android:layout_height="50.0dip" android:layout_marginTop="5.0dip">
        <TextView android:textSize="16.0dip" android:textColor="@color/white" android:layout_width="50.0dip" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/year_label" />
        <Spinner android:textStyle="bold" android:textColor="#ff222222" android:id="@id/spinner_year" android:focusable="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/lin_sort" android:background="@drawable/round_corner_filter" android:focusable="true" android:nextFocusUp="@id/lin_year" android:nextFocusDown="@id/lin_hsfk" android:layout_width="300.0dip" android:layout_height="50.0dip" android:layout_marginTop="5.0dip">
        <TextView android:textSize="16.0dip" android:textColor="@color/white" android:layout_width="60.0dip" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/sort_by_label" />
        <Spinner android:textStyle="bold" android:textColor="#ff222222" android:id="@id/spinner_sort" android:focusable="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" />
    </LinearLayout>
    <View android:background="#00000000" android:layout_width="fill_parent" android:layout_height="20.0dip" />
    <LinearLayout android:layout_width="300.0dip" android:layout_height="wrap_content">
        <Button android:textColor="@color/white" android:id="@id/cancel_but" android:background="@drawable/round_corner_filter" android:nextFocusUp="@id/lin_hsfk" android:nextFocusDown="@id/lin_server" android:layout_width="0.0dip" android:layout_height="60.0dip" android:layout_marginRight="10.0dip" android:text="@string/cancel_label" android:layout_weight="50.0" />
        <Button android:textColor="@color/white" android:id="@id/save_but" android:background="@drawable/round_corner_filter" android:nextFocusUp="@id/lin_hsfk" android:nextFocusDown="@id/lin_server" android:layout_width="0.0dip" android:layout_height="60.0dip" android:layout_marginLeft="10.0dip" android:text="@string/apply_label" android:layout_weight="50.0" />
    </LinearLayout>
</LinearLayout>